[metadata]
name = dmarc-reports
version = 0.0.1
author = Rui Antunes
author_email = 
description = The Python package for parsing, validation and storage of DMARC reports.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rui-antunes/dmarc-reports/
project_urls =
    GitHub = https://github.com/rui-antunes/dmarc-reports/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src